# openai-cpp

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/embeddings/: CMakeLists.txt  test_embeddings.cpp
examples/files/: CMakeLists.txt  test_files.cpp
examples/images/: CMakeLists.txt  test_images.cpp
examples/models/: CMakeLists.txt  test_models.cpp
examples/moderations/: CMakeLists.txt  test_moderations.cpp
examples/responses/: CMakeLists.txt  test_responses.cpp
include/: openai.h
include/openai/client/: APIClient.h  BaseClient.h  OpenAIClient.h
include/openai/resources/: Embeddings.h  Images.h  Models.h  api_resource.h  embeddings.h  files.h  images.h  models.h  moderations.h
include/openai/resources/responses/: responses.h
include/openai/service/: APIService.h  Embeddings.h  Images.h  Models.h
include/openai/types/: Embedding.h  Image.h  ImagesResponse.h  Model.h  create_embedding_response.h  embedding.h  embedding_create_response.h  file_deleted.h  file_object.h  image.h  images_response.h  model.h  moderation.h  moderation_create_response.h
include/openai/types/responses/: response.h  response_output_item.h
include/openai/utils/: OpenAIError.h  Types.h  URL.h  utils.h
src/: CMakeLists.txt
src/client/: APIClient.cpp  BaseClient.cpp  OpenAIClient.cpp
src/resources/: Embeddings.cpp  Images.cpp  Models.cpp  embeddings.cpp  files.cpp  images.cpp  models.cpp  moderations.cpp
src/resources/responses/: responses.cpp
src/service/: Embeddings.cpp  Images.cpp  Models.cpp
src/types/: embedding.cpp  embedding_create_response.cpp  file_deleted.cpp  file_object.cpp  image.cpp  images_response.cpp  model.cpp  moderation.cpp  moderation_create_response.cpp
